...
                        )
                    }
                }
                Spacer(Modifier.size(12.dp))
                Column {
                    Text(
                        text = "Modifier la transaction ?",
                        style = MaterialTheme.typography.titleLarge,
                        fontWeight = FontWeight.SemiBold,
                    )
                    Text(
                        text = "Cette transaction fait partie d’une série récurrente.",
                        style = MaterialTheme.typography.bodyMedium,
...
